Completed header and added jumbotron

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,28 @@
 
     <div class='page-content'>
         <div class='header'>
-            
+            <div class='wrapper'>
+                <div class='header__logo'>
+                    <img class='header__image' src='/images/banner-logo.png'>
+                </div>
+
+                <div class='search search--pull-right'>
+                    <form class='search__form'>
+                            <input class='search__input' type='text' placeholder='Search...'>
+                    </form>
+                    <div class='search__toggle'>
+                        <img class='search__icon' src='/images/search.png'>
+                    </div>
+                </div>
+
+                <p class='header__text'>
+                    We are now operating under summer hours
+                </p>
+
+            </div>
+        </div>
+        <div class='jumbotron'>
+            <img class='jumbotron__image' src='/images/golf-big.png'>
         </div>
     </div>
     <script src="/dist/bundle.js"></script>
