Added home page text and golf course image

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Alamance Country Club</title>
-    <link href="https://fonts.googleapis.com/css?family=EB+Garamond|Merriweather|Open+Sans:400,600|Playfair+Display+SC:900"
+    <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,600i|Merriweather|Open+Sans:400,600|Playfair+Display+SC:900"
         rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/dist/styles.css" />
 </head>
@@ -57,7 +57,7 @@
 
                 <div class='search search--pull-right'>
                     <form class='search__form'>
-                            <input class='search__input' type='text' placeholder='Search...'>
+                        <input class='search__input' type='text' placeholder='Search...'>
                     </form>
                     <div class='search__toggle'>
                         <img class='search__icon' src='/images/search.png'>
@@ -67,11 +67,33 @@
                 <p class='header__text'>
                     We are now operating under summer hours
                 </p>
-
             </div>
         </div>
         <div class='jumbotron'>
             <img class='jumbotron__image' src='/images/golf-big.png'>
+        </div>
+        <div class='blurb'>
+            <div class='wrapper wrapper--extra-right-padding'>
+                <h1 class='blurb__heading'>Spend some time with your extended family</h1>
+                <div class='line-break'>
+                    <div class='line-break__lines'></div>
+                    <img class='line-break__icon' src='images/line-break-clubs.png'>
+                    <div class='line-break__lines'></div>
+                </div>
+                <p class='blurb__text'>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ultrices purus nisl. Aenean
+                    pellentesque malesuada ornare. Integer ornare diam sit amet est posuere non fringilla justo
+                    elementum. Curabitur erat velit, rhoncus eget lobortis et, rhoncus et leo. Lorem ipsum dolor sit
+                    amet, consectetur adipiscing elit. Nulla ultrices purus nisl. Aenean pellentesque malesuada ornare.
+                    Integer ornare diam sit amet est posuere non fringilla justo elementum. Curabitur erat velit,
+                    rhoncus eget lobortis et, rhoncus et leo.
+                </p>
+                <div class='blurb__golf-course'>
+                    <a href="#">
+                        <img src='/images/golf-course.png'>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
     <script src="/dist/bundle.js"></script>
