Completed amenities grid

--- a/public/index.html
+++ b/public/index.html
@@ -95,6 +95,40 @@
                 </div>
             </div>
         </div>
+
+        <div class='amenities-grid'>
+            <div class='amenities-grid__column amenities-grid__column--large'>
+                <div class='amenities-grid__block amenities-grid__block--large'>
+                    <a class='amenities-grid__link' href='#'>
+                        <span class='amenities-grid__text'>Golf</span>
+                    </a>
+                </div>
+            </div>
+            <div class='amenities-grid__column'>
+                <div class='amenities-grid__block amenities-grid__block--fitness'>
+                    <a class='amenities-grid__link' href='#'>
+                        <span class='amenities-grid__text'>Fitness</span>
+                    </a>
+                </div>
+                <div class='amenities-grid__block amenities-grid__block--pool'>
+                    <a class='amenities-grid__link' href='#'>
+                        <span class='amenities-grid__text'>Pool</span>
+                    </a>
+                </div>
+            </div>
+            <div class='amenities-grid__column'>
+                <div class='amenities-grid__block amenities-grid__block--tennis'>
+                    <a class='amenities-grid__link' href='#'>
+                        <span class='amenities-grid__text'>Tennis</span>
+                    </a>
+                </div>
+                <div class='amenities-grid__block amenities-grid__block--events'>
+                    <a class='amenities-grid__link' href='#'>
+                        <span class='amenities-grid__text'>Special Events & Weddings</span>
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="/dist/bundle.js"></script>
 </body>
