Added Membership block

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Alamance Country Club</title>
-    <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,600i|Merriweather|Open+Sans:400,600|Playfair+Display+SC:900"
+    <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,500,600i|Merriweather|Open+Sans:400,600|Playfair+Display+SC:900"
         rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/dist/styles.css" />
 </head>
@@ -126,6 +126,23 @@
                     <a class='amenities-grid__link' href='#'>
                         <span class='amenities-grid__text'>Special Events & Weddings</span>
                     </a>
+                </div>
+            </div>
+        </div>
+
+        <div class='membership-block'>
+            <div class='wrapper'>
+                <div class='row row--flexbox row--flexbox-center-align'>
+                    <div class='row__4 center-text'>
+                        <img class='membership-block__name-image' src='/images/ACC-Logo_ALT_test.png'>
+                    </div>
+                    <div class='row__4 center-text'>
+                        <img class='membership-block__logo' src='/images/ACC-Logo_ALT_Seal_trim.png'>
+                    </div>
+                    <div class='row__4 center-text'>
+                            <p class='membership-block__question'>Interested in Membership?</p>
+                            <a class='membership-block__button btn' href='#'>Schedule a tour today!</a>
+                    </div>
                 </div>
             </div>
         </div>
