Completed club news section and began to add footer section

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Alamance Country Club</title>
-    <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,500,600i|Merriweather|Open+Sans:400,600|Playfair+Display+SC:900"
+    <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,500,600i|Merriweather:400,700|Open+Sans:400,600|Playfair+Display+SC:900"
         rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/dist/styles.css" />
 </head>
@@ -49,7 +49,7 @@
     </div>
 
     <div class='page-content'>
-        <div class='header'>
+        <header class='header'>
             <div class='wrapper'>
                 <div class='header__logo'>
                     <img class='header__image' src='/images/banner-logo.png'>
@@ -68,7 +68,7 @@
                     We are now operating under summer hours
                 </p>
             </div>
-        </div>
+        </header>
         <div class='jumbotron'>
             <img class='jumbotron__image' src='/images/golf-big.png'>
         </div>
@@ -140,12 +140,156 @@
                         <img class='membership-block__logo' src='/images/ACC-Logo_ALT_Seal_trim.png'>
                     </div>
                     <div class='row__4 center-text'>
-                            <p class='membership-block__question'>Interested in Membership?</p>
-                            <a class='membership-block__button btn' href='#'>Schedule a tour today!</a>
+                        <p class='membership-block__question'>Interested in Membership?</p>
+                        <a class='membership-block__button btn' href='#'>Schedule a tour today!</a>
                     </div>
                 </div>
             </div>
         </div>
+
+        <div class='club-news'>
+            <div class='wrapper'>
+                <div class='club-news__heading'>
+                    <h2 class='club-news__heading-text'>Club News</h2>
+                    <a class='club-news__all-news-link' href='#'><span>All News</span><img src='/images/hamburger.png'></a>
+                </div>
+
+                <div class='club-news__news-items'>
+                    <div class='club-news__previous'>
+                        <img src='/images/arrow_right.png'>
+                    </div>
+                    <div class='club-news__next'>
+                        <img src='/images/arrow_right.png'>
+                    </div>
+
+                    <div class='news-item'>
+                        <img class='news-item__image' src='/images/health_news.png'>
+                        <h3 class='news-item__heading'>Health News</h3>
+                        <p class='news-item__blurb'>Our fitness coaches can help you develop a routine to get back in
+                            shape</p>
+                        <div class='news-item__overlay'>
+                            <h3 class='news-item__overlay-heading'>Our fitness coaches can help you develop a routine
+                                to get back in shape</h3>
+                            <p class='news-item__overlay-blurb'>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ultrices purus nisl.
+                                Aenean pellentesque malesuada ornare. Integer ornare diam sit amet est posuere non
+                                fringilla justo elementum. Curabitur erat velit, rhoncus eget lobortis et, rhoncus et
+                                leo.
+                            </p>
+                            <a class='overlay-link' href='#'>
+                                Read More
+                            </a>
+                        </div>
+                    </div>
+                    <div class='news-item'>
+                        <img class='news-item__image' src='/images/membership_news.png'>
+                        <h3 class='news-item__heading'>Membership News</h3>
+                        <p class='news-item__blurb'>Details about our membership program</p>
+                        <div class='news-item__overlay'>
+                            <h3 class='news-item__overlay-heading'>Details About Our Membership Program</h3>
+                            <p class='news-item__overlay-blurb'>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ultrices purus nisl.
+                                Aenean pellentesque malesuada ornare. Integer ornare diam sit amet est posuere non
+                                fringilla justo elementum. Curabitur erat velit, rhoncus eget lobortis et, rhoncus et
+                                leo.
+                            </p>
+                            <a class='overlay-link' href='#'>
+                                Read More
+                            </a>
+                        </div>
+                    </div>
+                    <div class='news-item'>
+                        <img class='news-item__image' src='/images/community_news.png'>
+                        <h3 class='news-item__heading'>Community News</h3>
+                        <p class='news-item__blurb'>Welcome to our new community director, Mrs. July Belvidere!</p>
+                        <div class='news-item__overlay'>
+                            <h3 class='news-item__overlay-heading'>Welcome to our new community director, Mrs. July
+                                Belvidere!</h3>
+                            <p class='news-item__overlay-blurb'>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ultrices purus nisl.
+                                Aenean pellentesque malesuada ornare. Integer ornare diam sit amet est posuere non
+                                fringilla justo elementum. Curabitur erat velit, rhoncus eget lobortis et, rhoncus et
+                                leo.
+                            </p>
+                            <a class='overlay-link' href='#'>
+                                Read More
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='club-news__heading'>
+                    <h2 class='club-news__heading-text'>Club Events</h2>
+                    <a class='club-news__all-news-link'><span>Calendar</span><img src='/images/hamburger.png'> </a>
+                </div>
+                <div class='club-news__calendar-events'>
+                    <div class='club-news__previous'>
+                        <img src='/images/arrow_right.png'>
+                    </div>
+                    <div class='club-news__next'>
+                        <img src='/images/arrow_right.png'>
+                    </div>
+                    <div class='calendar-item'>
+                        <div class='calendar-item__date'>
+                            <div class='calendar-item__date-text'>
+                                <span class='calendar-item__month'>Jun</span>
+                                <span class='calendar-item__day'>12</span>
+                            </div>
+                        </div>
+                        <div class='calendar-item__description'>
+                            <h3 class='calendar-item__description-text'>New Member Dinner</h3>
+                            <div class='calendar-item__overlay'>
+                                <h3 class='calendar-item__overlay-heading'>New Member Dinner</h3>
+                                <p class='calendar-item__overlay-description'>7-9pm &#183; Primary Ballroom</p>
+                                <a class='overlay-link' href='#'>
+                                    Add To Calendar
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class='calendar-item'>
+                        <div class='calendar-item__date'>
+                            <div class='calendar-item__date-text'>
+                                <span class='calendar-item__month'>Sep</span>
+                                <span class='calendar-item__day'>28</span>
+                            </div>
+                        </div>
+                        <div class='calendar-item__description'>
+                            <h3 class='calendar-item__description-text'>Ladies Bridge Club</h3>
+                            <div class='calendar-item__overlay'>
+                                <h3 class='calendar-item__overlay-heading'>Ladies Bridge Club Coffee & Tea</h3>
+                                <p class='calendar-item__overlay-description'>7-9pm &#183; Primary Ballroom</p>
+                                <a class='overlay-link' href='#'>
+                                    Add To Calendar
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class='calendar-item'>
+                        <div class='calendar-item__date'>
+                            <div class='calendar-item__date-text'>
+                                <span class='calendar-item__month'>Dec</span>
+                                <span class='calendar-item__day'>18</span>
+                            </div>
+                        </div>
+                        <div class='calendar-item__description'>
+                            <h3 class='calendar-item__description-text'>Community Christmas Party!</h3>
+                            <div class='calendar-item__overlay'>
+                                <h3 class='calendar-item__overlay-heading'>Community Christmas Party!</h3>
+                                <p class='calendar-item__overlay-description'>7-9pm &#183; Primary Ballroom</p>
+                                <a class='overlay-link' href='#'>
+                                    Add To Calendar
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <footer class='footer'>
+            
+        </footer>
     </div>
     <script src="/dist/bundle.js"></script>
 </body>
