--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Alamance Country Club</title>
-    <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,500,600i|Merriweather:400,700|Open+Sans:400,600|Playfair+Display+SC:900"
-        rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+        crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|EB+Garamond:400,500,600i|Merriweather:400,700|Nanum+Gothic|Open+Sans:400,600|Playfair+Display+SC:900" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/dist/styles.css" />
 </head>
 
@@ -288,7 +289,22 @@
         </div>
 
         <footer class='footer'>
-            
+            <div class='wrapper'>
+                <div class='footer__content'>
+                    <a class='footer__member-link' href='#'>Member Login</a>
+                    <img class='footer__pga-logo' src='images/pga_logo.png'>
+                    <div class='footer__social-links social-links'>
+                        <a href='#'><i class="fab fa-twitter"></i></a>
+                        <a href='#'><i class="fab fa-facebook-f"></i></a>
+                        <a href='#'><i class="fab fa-instagram"></i></a>
+                        <a href='#'><i class="fas fa-share-alt"></i></a>
+                    </div>
+                    <div class='contact-info footer__contact-info'>
+                        <p>Alamance County<img src='/images/footer-logo.png'>North Carolina</p>
+                        <p>123 Sesame Street <span class='contact-info__bullet'>&#8226;</span> Nowhere, CA 12345<span class='contact-info__bullet'>&#8226;</span> <strong>PHONE</strong> (555) 555-5555 </p>
+                    </div>
+                </div>
+            </div>
         </footer>
     </div>
     <script src="/dist/bundle.js"></script>
